@@ -5,6 +5,8 @@ version 1.9.13, in progress
   make the MAIC method the default
 - Improve internals of pprintf() -- handle big string args
   properly
+- readfile() function: check for valid UTF-8 and recode if
+  possible if the text is not UTF-8
 - Fix a few small GUI memory leaks
 - Linux and Windows: add check for multiple instances of
   gretl, and choice to open a double-clicked file in the
